--- a/canvas/踩坑.md
+++ b/canvas/踩坑.md
@@ -2,7 +2,7 @@
 
 - 尝试给 canvas 设置宽高
 
-  当我尝试用 css 样式给 canvas 设置宽高时，发现绘制的矩阵大小和我想象中的不太一样
+  当我尝试用 css 样式给 canvas 设置宽高时，发现绘制的矩阵大小和我想象中的不太一样
 
   ```html
   <canvas id="canvas"></canvas>
