--- a/设计模式/创建型/原型模式.md
+++ b/设计模式/创建型/原型模式.md
@@ -6,6 +6,6 @@
 
 #### 定义
 
-![Prototype](imgs/Prototype.png)
+![Prototype](../imgs/Prototype.png)
 
 `Prototype` 模式对于 “如何创建易变体的实体对象” 采用 “原型克隆” 的方法来做，它是我们可以非常灵活地动态创建 “拥有某些稳定接口” 的新对象（所需工作仅仅是注册一个新类的对象 [即原型]，然后在任何需要的地方 `Clone`）。
