--- a/设计模式/创建型/单例模式.md
+++ b/设计模式/创建型/单例模式.md
@@ -8,7 +8,7 @@
 
 保证一个类只有一个实例，并提供一个访问它的全局访问点
 
-![Singleton](imgs/Singleton.png)
+![Singleton](../imgs/Singleton.png)
 
 **单例** （`Singleton`） 类声明了一个名为 `get­Instance` 获取实例的静态方法来返回其所属类的一个相同实例。
 
