--- a/设计模式/创建型/工厂方法和抽象工厂模式.md
+++ b/设计模式/创建型/工厂方法和抽象工厂模式.md
@@ -18,7 +18,7 @@
 
 工厂方法用于隔离类对象的使用者和具体类型之间的耦合关系。面对一个经常变化的具体类型，紧耦合关系会导致软件的脆弱。
 
-![Factory_Method](imgs/Factory_Method.png)
+![Factory_Method](../imgs/Factory_Method.png)
 
 
 工厂方法的优缺点：
@@ -35,7 +35,7 @@
 
 提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
 
-![Abstract_Factory](imgs/Abstract_Factory.png)
+![Abstract_Factory](../imgs/Abstract_Factory.png)
 
 
 抽象工厂模式的优缺点：
