--- a/设计模式/创建型/生成器模式.md
+++ b/设计模式/创建型/生成器模式.md
@@ -10,7 +10,7 @@
 
 #### 结构表示
 
-![Builder](imgs/Builder.png)
+![Builder](../imgs/Builder.png)
 
 `Builder` 是为创建一个 `Product` 对象的各个部件指定的抽象接口，`ConcreteBuilder` 是具体的建造者，实现 `Builder` 接口，构造和装配各个部件，`Product` 是那些具体的产品。`Director` 指挥者，根据用户需求，构建一个使用 `Builder` 接口的对象。
 
