--- a/设计模式/创建型/设计原则.md
+++ b/设计模式/创建型/设计原则.md
@@ -38,3 +38,13 @@
 5. 接口隔离原则
 
     不应该强迫客户程序依赖它们不用的方法。接口应该小而完备，依赖应该建立在最小的接口上。
+
+6. 聚合/组合复用原则
+
+    优先使用对象聚合/组成，而不是类继承。
+
+
+
+组合和聚合都是关联的特殊种类。`聚合`表示一种弱的 “拥有” 关系，体现的是 `A` 对象可以包含 `B` 对象，但 `B` 对象不是 `A` 对象的一部分；`组合`则是一种强的 “拥有” 关系，体现了严格的部分和整体的关系，部分和整体的生命周期一样。
+
+聚合/组合复用原则的好处是：优先使用对象的组合/聚合将有助于你保持每个类被封装，并被集中在单个任务上。这样类和类继承层次会保持较小规模，并且不太可能增长为不可控制的庞然大物。
