--- a/设计模式/结构型/装饰模式.md
+++ b/设计模式/结构型/装饰模式.md
@@ -19,3 +19,5 @@
 #### 3. 结构
 
 ![装饰模式](../imgs/Decorator.png)
+
+通过采用组合而非继承的手法，装饰模式在接口上表现为 “is-a” Component 的继承关系，即表现为 Decorator 类继承了 Component 类所具有的接口，但在实现上又表现为 “has-a” Component 的组合关系，即 Decorator 类又使用了另外一个 Component 类。装饰模式的应用主要在于解决 “主体类在多个方向上的扩展功能”。
