--- a/设计模式/结构型/桥接模式.md
+++ b/设计模式/结构型/桥接模式.md
@@ -12,7 +12,7 @@
 
 #### 2. 动机
 
-- 由于某些类型的故有实现逻辑，似的它们具有两个乃至多个变化的纬度。
+- 由于某些类型的故有实现逻辑，使得它们具有两个乃至多个变化的纬度。
 
 - 如何应该这种 “多维度的变化”？如何使类型沿着两个或多个方向轻松的变化，而不引入额外的复杂度？
 
