--- a/设计模式/结构型/组合模式.md
+++ b/设计模式/结构型/组合模式.md
@@ -1,5 +1,9 @@
 ## 组合模式
 
+“数据结构” 模式：
+
+有一些组件在内部具有特定的数据结构，如果让客户程序依赖这些特定的数据结构，将极大地破坏组件的复用，这时候，将这些特定数据结构封装在内部，在外部提供统一的接口，来实现与特定数据结构无关的访问。
+
 #### 1. 意图
 
 将对象组合成树形结构以表示 “**部分-整体**” 的层次结构。组合模式使得用户对单个对象和组合对象的使用具有一致性。
