--- a/几何图形自动识别/几何自动识别.md
+++ b/几何图形自动识别/几何自动识别.md
@@ -119,7 +119,7 @@
 		![累计距离](imgs/直线累计距离.jpg)
 
 	- Step3：直线率 R 为：  
-		![直线率](/imgs/直线率.jpg) 
+		![直线率](imgs/直线率.jpg) 
 
 	当直线率越接近 1 时，是直线的概率就越大，该项目直线率的选取为 0.96。 
 
